--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -55,17 +55,17 @@
     <section>
         <h2>Interests</h2>
         <ul>
-            <li>Swimming</li>
+            <li>Driving</li>
             <li>Playing Online Games</li>
             <li>Programming</li>
-            <li>Information Technology</li>
         </ul>
     </section>
 
     <section>
         <h2>Skills</h2>
         <ul>
-            <li>Web Design with HTML & CSS</li>
+            <li>Playing Guitar</li>
+             <li>Dancing</li>
         </ul>
     </section>
 
@@ -78,19 +78,18 @@
     </section>
 
     <section>
-        <h2>Experience</h2>
+        <h2>Hobbies</h2>
         <ul>
-            <li>SUPPORT STAFF AT MUNICIPAL GOV.</li>
-            <li></li>
+            <li>Cooking</li>
+            <li>Watching Kdrama</li>
+            <li>Singing</li>
         </ul>
     </section>
 
     <section>
-        <h2>EXTRACURRICULARS</h2>
+        <h2>Experience</h2>
         <ul>
-            <li>Artificial Intelligence Club</li>
-            <li>Web Development Club</li>
-            <li>Cybersecurity Club</li>
+            <li>Vendor in our Store</li>
         </ul>
     </section>
 </body>
